@@ -9,12 +9,12 @@
 
     <groupId>org.panteleyev</groupId>
     <artifactId>password-manager</artifactId>
-    <version>21.4.2</version>
+    <version>21.4.3</version>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>16</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <appModule>password.manager</appModule>
         <appMainClass>org.panteleyev.pwdmanager.PasswordManagerApplication</appMainClass>
@@ -27,8 +27,8 @@
         <javaFxPluginVersion>0.0.6</javaFxPluginVersion>
         <jpackageMavenPluginVersion>1.5.1</jpackageMavenPluginVersion>
         <!-- Dependencies -->
-        <javaFxVersion>16</javaFxVersion>
-        <javaFxHelpersVersion>1.8.3</javaFxHelpersVersion>
+        <javaFxVersion>17.0.1</javaFxVersion>
+        <javaFxHelpersVersion>1.9.0</javaFxHelpersVersion>
         <controlsFxVersion>11.1.0</controlsFxVersion>
         <testNgVersion>7.3.0</testNgVersion>
     </properties>
@@ -97,6 +97,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mavenCompilerPluginVersion}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -115,6 +120,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mavenSurefirePluginVersion}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -151,6 +159,7 @@
                     </modulePaths>
                     <destination>target/dist</destination>
                     <javaOptions>
+                        <option>--enable-preview</option>
                         <option>-Dfile.encoding=UTF-8</option>
                     </javaOptions>
                 </configuration>
@@ -186,6 +195,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>
+                                <option>--enable-preview</option>
                                 <option>-Dfile.encoding=UTF-8</option>
                                 <option>-Dpassword.file=${password.file}</option>
                             </options>
@@ -195,6 +205,7 @@
                         <id>debug</id>
                         <configuration>
                             <options>
+                                <option>--enable-preview</option>
                                 <option>-Dfile.encoding=UTF-8</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                 <option>-Dpassword.file=${password.file}</option>
